# CudaCodes

./: Cuda简介.md  README.md
code/: CMakeLists.txt
code/src/: getDevice.cu  hello.cu
